Fix icon alignment when sizing is not full width/height

--- a/src/components/Icon/Icon.scss
+++ b/src/components/Icon/Icon.scss
@@ -47,6 +47,8 @@ $colours: (
   }
 
   & > svg {
+    width: 100%;
+    height: 100%;
     display: block;
     fill: inherit;
   }
